--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>Карточка для изучения слов</title>
   <link rel="stylesheet" href="style.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
