--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <textarea class="menu-textarea" name="" id="" cols="30" rows="10"></textarea>
     </div>
 
-    <div class="card">
+    <div class="card" tabindex="0">
       <div class="front"><span class="front-text">FRONT</span></div>
       <div class="back"><span class="back-text">BACK</span></div>
     </div>
 
     <div class="buttons">
-      <div class="button menuBtn">Menu</div>
-      <div class="button nextBtn">Next</div>
+      <button class="button menuBtn" tabindex="0">Menu</button>
+      <button class="button nextBtn" tabindex="0">Next</button>
     </div>
   </div>
 
