--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="card-container">
 
-    <div class="menu">
+    <div class="menu" spellcheck="false">
       <textarea class="menu-textarea" name="" id="" cols="30" rows="10"></textarea>
     </div>
 
